objects/Cl_usulas_do_Contrato__c.object
<CustomObject>
    <fields>
        <fullName>Ativo__c</fullName>
        <label>Ativo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_digo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cláusula</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>CRM</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>CL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cláusulas do Contrato (Cláusula)</relationshipLabel>
        <relationshipName>Cl_usulas_do_Contrato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cl_usula_prazo_indeterminado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cláusula prazo indeterminado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codigo_Base_de_Calculo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base de Cálculo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>CRM</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>BC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cláusulas do Contrato (Código Base de Cálculo)</relationshipLabel>
        <relationshipName>Cl_usulas_do_Contrato1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conta_de_Credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta de Crédito</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>CRM</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>CC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cláusulas do Contrato (Conta de Crédito)</relationshipLabel>
        <relationshipName>Cl_usulas_do_Contrato3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conta_de_Debito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta de Débito</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>CRM</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>CC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cláusulas do Contrato (Conta de Débito)</relationshipLabel>
        <relationshipName>Cl_usulas_do_Contrato2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrato__c</fullName>
        <label>Contrato</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Cláusulas do Contrato</relationshipLabel>
        <relationshipName>Cl_usulas_do_Contrato</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distribuicao_OK__c</fullName>
        <formula>IF(  ROUND(Soma_Distribuicao_de_Valores__c, 2) = Valor__c , &quot;CLÁUSULA OK&quot;, &quot;ERRO DE DISTRIBUIÇÃO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribuição OK?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_da_Cl_usula__c</fullName>
        <label>Nome da Cláusula</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentual__c</fullName>
        <label>Percentual</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Soma_Distribuicao_de_Valores__c</fullName>
        <label>Soma Distribuição de Valores</label>
        <summarizedField>Distribui_o_de_Valores__c.Valor_da_Parcela_R__c</summarizedField>
        <summaryForeignKey>Distribui_o_de_Valores__c.Clausulas_do_Contrato__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Calculo__c</fullName>
        <label>Tipo de Cálculo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentual</fullName>
                </value>
                <value>
                    <fullName>Valor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_de_resgistros__c</fullName>
        <label>Total de registros</label>
        <summaryForeignKey>Distribui_o_de_Valores__c.Clausulas_do_Contrato__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cláusulas do Contrato</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>Cláusula-{000000000}</displayFormat>
        <label>Cláusula</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cláusulas do Contrato</pluralLabel>
    <recordTypes>
        <fullName>Clausulas_do_Contrato</fullName>
        <active>true</active>
        <label>Cláusulas do Contrato</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Soma_dos_valores_maior_que_o_da_clausula</fullName>
        <active>true</active>
        <description>Soma de todos os registros de distribuição não deve passar o valor da clausula do contrato</description>
        <errorConditionFormula>Soma_Distribuicao_de_Valores__c &gt;  Valor__c</errorConditionFormula>
        <errorMessage>A soma da distribuição não deve ultrapassar o valor da Cláusula.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tipo_de_calculo_igual_a_percentual</fullName>
        <active>true</active>
        <description>quando o campo tipo de calculo igual a percentual o campo percentual não pode ser vazio e o campo valor deve ser vazio.</description>
        <errorConditionFormula>AND(ISPICKVAL( Tipo_de_Calculo__c , &quot;Percentual&quot;),   ISBLANK(  Percentual__c  )  || 
NOT ISBLANK(   Valor__c))
 || 
AND(ISPICKVAL( Tipo_de_Calculo__c , &quot;Valor&quot;),   ISBLANK(  Valor__c )  || 
NOT ISBLANK ( Percentual__c))</errorConditionFormula>
        <errorDisplayField>Tipo_de_Calculo__c</errorDisplayField>
        <errorMessage>Quando o Tipo de Calculo = &quot;Percentual&quot; o campo percentual é obrigatório
Quando o Tipo de Calculo = &quot;Valor&quot; o campo Valor é obrigatório
Só pode haver uma opção preenchida.</errorMessage>
    </validationRules>
</CustomObject>